# lib/db/src/schema/gyms.ts
@@ -5,6 +5,7 @@ import { z } from "zod/v4";
 export const gymsTable = pgTable("gyms", {
   id: serial("id").primaryKey(),
   name: text("name").notNull(),
+  brand: text("brand"),
   location: text("location").notNull(),
   nearestMrt: text("nearest_mrt").notNull(),
   dayPassPrice: numeric("day_pass_price", { precision: 6, scale: 2 }).notNull(),
@@ -14,6 +15,7 @@ export const gymsTable = pgTable("gyms", {
   gradeSystem: text("grade_system").notNull(),
   website: text("website"),
   imageUrl: text("image_url"),
+  instagramUrl: text("instagram_url"),
   description: text("description"),
   routesetSchedule: jsonb("routeset_schedule").$type<{
     sourceUrl?: string;
